# blade

./: .gitignore  CMakeLists.txt  README.md  go.sh  simple.vert.spv
apps/gfx_simple/: CMakeLists.txt  gfx_simple.cc
apps/window/: CMakeLists.txt  window.cc
blade/gfx/: renderer.cc  vertex.cc
blade/gfx/vulkan/: buffer.cc  command.cc  command_buffer.cc  command_handler.cc  command_pool.cc  debugger.cc  device.cc  instance.cc  physical_device.cc  pipeline.cc  platform.cc  renderer.cc  renderpass.cc  shader.cc  submit.h  surface.cc  swapchain.cc  utils.cc  view.cc
blade/resources/: fs.cc
blade/window/: window_linux.cc  window_win32.cc
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/apps/gfx_simple/: Makefile  cmake_install.cmake  gfx_simple_example
build_debug/apps/window/: Makefile  cmake_install.cmake  window_example
include/blade/: blade.h
include/blade/core/: core.h  defines.h  event.h  logger.h  memory.h  traits.h  types.h
include/blade/core/containers/: free_list.h
include/blade/gfx/: framebuffer.h  gfx.h  handle.h  program.h  renderer.h  vertex.h  view.h
include/blade/gfx/vulkan/: buffer.h  command.h  command_handler.h  common.h  device.h  instance.h  pipeline.h  platform.h  renderer.h  renderpass.h  shader.h  surface.h  swapchain.h  types.h  utils.h  view.h
include/blade/math/: math.h  operations.h  traits.h  vec2.h  vec3.h
include/blade/resources/: fs.h  resources.h
include/blade/window/: window.h
resources/builtin/shaders/: simple.vert
